--- a/hw6.tex
+++ b/hw6.tex
@@ -1,12 +1,12 @@
 %\documentclass[]{article}
 \documentclass[11pt,onecolumn]{article}
 \usepackage{pset}
-\newcommand{\nn}{_{2n}}
-\newcommand{\bl}{B_{3,1}}
+
 
 
 \title{MATH 4500 - Homework 5}
 \author{Daniel Alonso Vicuna}
+\date{March 6, 2019}
 
 \begin{document}
 \maketitle
