--- a/pset.sty
+++ b/pset.sty
@@ -33,3 +33,8 @@
 \newcommand{\todo}[1]{\textcolor{red}{\bf [TODO: #1]}}
 
 \pdfrender{StrokeColor=black,TextRenderingMode=2,LineWidth=0.3pt}
+
+\DeclareMathOperator{\lso}{\mathfrak{so}}
+\DeclareMathOperator{\lsu}{\mathfrak{su}}
+\DeclareMathOperator{\lsl}{\mathfrak{sl}}
+\DeclareMathOperator{\lgl}{\mathfrak{gl}}
